--- a/01_pratica-guiada/index.html
+++ b/01_pratica-guiada/index.html
@@ -6,5 +6,8 @@
     <script src="script.js"></script>
   </head>
 
-  <body></body>
+  <body>
+Faruqi  - operadores  prática 1 
+
+  </body>
 </html>
